add styles tab and styling options in gallery block and refactor block spacing code

--- a/src/gallery/common.scss
+++ b/src/gallery/common.scss
@@ -1,6 +1,7 @@
 @use "sass:math";
 
 .galleryberg-gallery-container {
+	overflow: hidden;
 	// Cropped Images.
 	figure.galleryberg-image {
 		align-self: inherit;
