--- a/packages/galleryberg-gallery-block/src/image/common.scss
+++ b/packages/galleryberg-gallery-block/src/image/common.scss
@@ -157,6 +157,29 @@
 		box-sizing: border-box;
 	}
 
+	// Hover Effect
+	&.has-hover-effect {
+		overflow: hidden;
+
+		img {
+			transition: transform 0.3s ease;
+		}
+
+		// Zoom In: Image scales up on hover
+		&.hover-zoom-in:hover img {
+			transform: scale(1.1);
+		}
+
+		// Zoom Out: Image starts scaled and returns to normal on hover
+		&.hover-zoom-out img {
+			transform: scale(1.1);
+		}
+
+		&.hover-zoom-out:hover img {
+			transform: scale(1);
+		}
+	}
+
 	&.is-selected {
 		.components-placeholder {
 			&.has-illustration {
