New mosaic layout (#3)
* add mosaic layout in pro

* add col and row span option on the image block in pro

* add fallback to URL-based rendering when attachment doesn't exist in media library

* remove comments and hard coded gap css

* use block_type_metadata filter to enqueue scripts and styles

--- a/packages/galleryberg-gallery-block-pro/src/gallery/style.scss
+++ b/packages/galleryberg-gallery-block-pro/src/gallery/style.scss
@@ -150,3 +150,32 @@
 		}
 	}
 }
+
+/**
+ * Mosaic Layout Styles
+ */
+.layout-mosaic {
+	display: grid;
+
+	figure.galleryberg-image {
+		// Default size (can be overridden by inline styles)
+		grid-column: span 1;
+		grid-row: span 1;
+
+		// Vary sizes for mosaic effect (defaults when no manual spans set)
+		&:nth-child(3n + 1) {
+			grid-column: span 2;
+			grid-row: span 1;
+		}
+
+		&:nth-child(3n + 2) {
+			grid-column: span 1;
+			grid-row: span 2;
+		}
+
+		&:nth-child(3n) {
+			grid-column: span 1;
+			grid-row: span 1;
+		}
+	}
+}
