--- a/packages/galleryberg-gallery-block/src/gallery/editor.scss
+++ b/packages/galleryberg-gallery-block/src/gallery/editor.scss
@@ -1,4 +1,5 @@
 @import "./common.scss";
+@import "../components/upsell/upsell.scss";
 .galleryberg-gallery-container .block-editor-media-placeholder {
 	grid-column: 1 / span 3;
 	column-span: all;
